@@ -47,6 +47,8 @@ This release includes the following bugfixes:
  o (HTTP) Expect: header disabling work better
  o (HTTP) "Expect: 100-continue" disable on second POST on re-used connection
  o src/config.h.in is fixed
+ o (HTTP) POST data logged to the debug callback function is now correctly
+   tagged as data, not header
 
 Other curl-related news:
 
@@ -66,6 +68,6 @@ advice from friends like these:
  Domenico Andreoli, Armel Asselin, Gisle Vanem, Yang Tse, Andrew Biggs,
  Peter Sylvester, David McCreedy, Dmitriy Sergeyev, Dmitry Rechkin,
  Jari Sundell, Ravi Pratap, Michele Bini, Jeff Pohlmeyer, Michael Wallner,
- Mike Protts, Cory Nelson, Bernard Leak, Bogdan Nicula
+ Mike Protts, Cory Nelson, Bernard Leak, Bogdan Nicula, Dan Fandrich
 
         Thanks! (and sorry if I forgot to mention someone)
